RESOLVED FIXED310570
[Cocoa] SafariViewService does not clear its Now Playing parent application when closed
https://bugs.webkit.org/show_bug.cgi?id=310570
Summary [Cocoa] SafariViewService does not clear its Now Playing parent application w...
Jer Noble
Reported 2026-03-23 13:51:50 PDT
[Cocoa] SafariViewService does not clear its Now Playing parent application when closed
Attachments
Jer Noble
Comment 1 2026-03-23 13:51:51 PDT
Jer Noble
Comment 2 2026-03-23 13:55:44 PDT
EWS
Comment 3 2026-03-24 20:13:10 PDT
Committed 309886@main (931c18ff23e2): <https://commits.webkit.org/309886@main> Reviewed commits have been landed. Closing PR #61189 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.