[Cocoa] SafariViewService does not clear its Now Playing parent application when closed rdar://172257741 https://bugs.webkit.org/show_bug.cgi?id=310570

Reviewed by Andy Estes.

When updating NowPlayingInfo and that info has a sourceApplicationIdentifier, we will
tell Now Playing that we are acting on behalf of that application. This gets Now Playing
into an inconsistent state after a web view is closed, where it continues to believe that
the GPU process is acting on behalf of that application. Clear the state by calling
MRMediaRemoteSetParentApplication with a null application when we clear the rest of our
now playing state.

* Source/WebCore/platform/audio/cocoa/MediaSessionManagerCocoa.mm:
(WebCore::MediaSessionManagerCocoa::clearNowPlayingInfo):

Canonical link: https://commits.webkit.org/309886@main